fixed grid spacing

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,14 +1,14 @@
 header h1 { background: black; }
-h1 { background: darkgrey; }
 h2 {color: darkgrey;}
 section { margin-bottom: 40px; }
 footer { background: black; }
 footer a { color: white; }
 
-body a h1:hover {
+.button-bg { background: darkgrey; }
+.button-bg:hover {
 	background: salmon;
 }
 
-.pending h1 {
+.pending .button-bg {
 	background: lightgrey;
 }
